# docmd

./: .gitignore  AGENTS.md  README.md  dev  dev.ps1  laudo.spec  main.py  mypy.ini  pyproject.toml
src/docmd/: __init__.py  __main__.py  assets.py  config.py  core.py  pdf.py
src/docmd/filters/: __init__.py  markdown_filter.py
src/docmd/globals/: __init__.py  subdoc_func.py  subdoc_internal_func.py
src/docmd/globals/templates/: tablepics.docx
src/laudo/: __main__.py  core.py  images.py
src/laudo/filters/: __init__.py
src/laudo/globals/: __init__.py
src/laudo/gui/: caption_editor.py
src/laudo/odttpl/: __init__.py  inline_image.py  makup_objects.py  markdown_map.py  odttpl.py  styles_manager.py  subdoc_helpers.py
tests/: conftest.py  test_assets.py  test_cli.py  test_core.py
